--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
-   font-family: "Roboto", sans-serif;
+   font-family: "Roboto";
    src: url("../fonts/Roboto-Regular.woff2") format("woff2"),
-      url("../Roboto-Regular.woff") format("woff");
+      url("../fonts/Roboto-Regular.woff") format("woff");
    font-weight: 400;
    font-style: normal;
    font-display: swap;
 }
 @font-face {
-   font-family: "Roboto", sans-serif;
+   font-family: "Roboto";
    src: url("../fonts/Roboto-Medium.woff2") format("woff2"),
-      url("../Roboto-Medium.woff") format("woff");
+      url("../fonts/Roboto-Medium.woff") format("woff");
    font-weight: 500;
    font-style: normal;
    font-display: swap;
 }
 @font-face {
-   font-family: "Roboto", sans-serif;
+   font-family: "Roboto";
    src: url("../fonts/Roboto-Bold.woff2") format("woff2"),
-      url("../Roboto-Bold.woff") format("woff");
+      url("../fonts/Roboto-Bold.woff") format("woff");
    font-weight: 700;
    font-style: normal;
    font-display: swap;
