--- a/app/scss/_articles.scss
+++ b/app/scss/_articles.scss
@@ -1,12 +1,11 @@
 .articles {
-   display: none;
    position: fixed;
    top: 50px;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 30;
-   // display: flex;
+   display: flex;
    justify-content: center;
    align-items: center;
    font-size: 24px;
@@ -71,9 +70,6 @@
 .opinion {
    &__inner {
       margin-bottom: 40px;
-   }
-
-   &__title {
    }
 
    &__articles {
