--- a/app/scss/_articles.scss
+++ b/app/scss/_articles.scss
@@ -12,6 +12,12 @@
    font-weight: 500;
    line-height: 28px;
    text-align: left;
+   @media (orientation: portrait) and (max-width: 768px) {
+      top: 0px;
+   }
+   @media (orientation: landscape) and (max-height: 768px) {
+       top: 0px;
+   }
 
    &__inner {
       background: rgba(0, 0, 0, 0.5);
