--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -22,11 +22,6 @@
    // ====================================
 }
 // ПЛАШКА=========================
-.header.active {
-   background: rgba(0, 0, 0, 0.45);
-   backdrop-filter: blur(16px);
-   border: 1px solid rgba(255, 255, 255, 0.18);
-}
 
 // БУРГЕР=============================
 .burger {
@@ -122,7 +117,7 @@ $height: 100px;
          margin: 0px 17px;
       }
       @media (orientation: portrait) and (max-width: 768px) {
-         margin: 10px 0px;
+         margin: 10px 0px 0px;
       }
       @media (orientation: landscape) and (max-height: 768px) {
          margin: 10px 0px;
@@ -143,8 +138,8 @@ $height: 100px;
       -webkit-backdrop-filter: blur(18px) saturate(200%);
       background-color: rgba(17, 25, 40, 0.74);
       border: 1px solid rgba(255, 255, 255, 0.125);
-      font-size: 30px;
-      line-height: 35px;
+      font-size: calc(20px + (10 + 10 * 0.7) * ((100vh - 418px) / 1200));
+      line-height: calc(21px + (14 + 14 * 0.7) * ((100vh - 418px) / 1200));
    }
    @media (orientation: landscape) and (max-height: 768px) {
       flex-direction: column;
@@ -158,8 +153,10 @@ $height: 100px;
       background-color: rgba(17, 25, 40, 0.74);
       border: 1px solid rgba(255, 255, 255, 0.125);
       height: 100vh;
-      font-size: 30px;
-      line-height: 35px;
+      // font-size: 30px;
+      // line-height: 35px;
+      font-size: calc(20px + (10 + 10 * 0.7) * ((100vh - 418px) / 1200));
+      line-height: calc(21px + (14 + 14 * 0.7) * ((100vh - 418px) / 1200));
    }
 }
 
@@ -194,13 +191,16 @@ $height: 100px;
       }
       @media (orientation: portrait) and (max-width: 768px) {
          width: 200px;
+         justify-content: center;
       }
       @media (orientation: landscape) and (max-height: 768px) {
          width: 200px;
+         justify-content: center;
       }
    }
 
    &__input span {
+      white-space: nowrap;
       display: block;
    }
 
@@ -257,6 +257,8 @@ $height: 100px;
       @media (orientation: portrait) and (max-width: 768px) {
          padding: 2px 15px;
          line-height: 28px;
+         font-size: calc(15px + (10 + 10 * 0.7) * ((100vh - 418px) / 1200));
+      line-height: calc(18px + (1 + 1 * 0.7) * ((100vh - 418px) / 1200));
       }
       @media (orientation: landscape) and (max-height: 768px) {
          padding: 2px 15px;
@@ -276,6 +278,7 @@ $height: 100px;
    }
 }
 .select__arow {
+   margin: 0px 0px 0px 10px;
    width: 15px;
    height: 9px;
    @media (orientation: portrait) and (max-width: 768px) {
